# stateaware-ics-monitoring

./: .gitignore  .gitmodules  INSTALL.md  LICENSE  README.md  conftest.py  pyproject.toml
baselines/: __init__.py
scripts/: .gitignore  README.md  gen_wadi_topology.py  run_ablation.py
src/dataio/: __init__.py  ingest.py  loader.py  manifest.py  model.py  schema.py
src/gfsm/: __init__.py  analysis.py  cli.py  compose.py  driver.py  extractor.py  manifest.py  model.py  output.py  signatures.py  worker.py  xml_parser.py
src/invariants/: __init__.py  cli.py  driver.py  manifest.py  mine.py  model.py  rule_eval.py  state_label.py  threshold.py
src/monitor/: __init__.py  cli.py  driver.py  fusion.py  gfsm_detector.py  invariants_detector.py  model.py  protocol.py  stl_detector.py
src/st_analyze/: __init__.py  adapter.py  cli.py  driver.py  manifest.py  model.py
src/st_gen/: __init__.py  cli.py  inp_parser.py  model.py  plcs_loader.py  st_emitter.py
src/stl/: __init__.py  _rtamt_compat.py  calibrate.py  cli.py  detector.py  driver.py  evaluate.py  manifest.py  metrics.py  model.py  profiles.py  signals.py  synthesize.py
tests/dataio/: conftest.py  test_ingest_ctown.py  test_loader.py  test_ltown_layout.py  test_manifest.py  test_model.py  test_schema.py
tests/gfsm/: conftest.py  test_analysis.py  test_cli.py  test_compose.py  test_concurrency.py  test_driver.py  test_extractor.py  test_golden_anytown.py  test_golden_ctown.py  test_golden_ltown.py  test_golden_wadi.py  test_manifest.py  test_model.py  test_output.py  test_port_fidelity.py  test_scaffold.py  test_signatures.py  test_xml_parser.py
tests/invariants/: test_cli.py  test_driver.py  test_golden_anytown.py  test_golden_ctown.py  test_golden_ltown.py  test_manifest.py  test_mine.py  test_model.py  test_niaarm_api.py  test_rule_eval.py  test_state_label.py  test_threshold.py
tests/monitor/: test_cli.py  test_detectors.py  test_fusion.py  test_fusion_intersection.py  test_gfsm_detector.py  test_invariants_detector.py
tests/st_analyze/: conftest.py  test_adapter.py  test_cli.py  test_driver.py  test_golden_anytown.py  test_golden_ctown.py  test_golden_ltown.py  test_golden_wadi.py  test_manifest.py  test_model.py  test_phase0_demo.py  test_vendored_import.py
tests/st_gen/: conftest.py  test_cli.py  test_golden_anytown.py  test_golden_ctown.py  test_golden_ltown.py  test_golden_wadi.py  test_inp_parser.py  test_model.py  test_plcs_loader.py  test_st_emitter.py
tests/stl/: test_calibrate.py  test_cli.py  test_detector.py  test_evaluate.py  test_golden_anytown.py  test_golden_ctown.py  test_golden_ltown.py  test_metrics.py  test_profiles.py  test_rtamt_available.py  test_signals.py  test_synthesize.py
tests/wadi_topology/: conftest.py  test_emit.py  test_fit.py  test_generated_valid.py  (+1 more)
(+30 files in other folders)
