[project]
name = "stateaware-ics-monitoring"
version = "0.1.0"
description = "State-aware ICS monitoring pipeline (stage 1: st_gen)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0",
    "lxml>=6.0.2",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
st-gen = "st_gen.cli:main"
st-analyze = "st_analyze.cli:main"
gfsm-build = "gfsm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/st_gen", "src/iec_st_compiler", "src/st_analyze", "src/gfsm"]
