[project]
name = "stateaware-ics-monitoring"
version = "0.1.0"
description = "State-aware ICS monitoring pipeline (stage 1: st_gen)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0",
    "lxml>=6.0.2",
    "networkx>=3.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "rtamt",
    "py7zr>=0.21",
    "zarr>=2.17",
    "niaarm>=0.3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
baselines = [
    "torch",
    "xgboost",
    "imbalanced-learn",
]

[project.scripts]
st-gen = "st_gen.cli:main"
st-analyze = "st_analyze.cli:main"
gfsm-build = "gfsm.cli:main"
stl-monitor = "stl.cli:main"
ics-monitor = "monitor.cli:main"
dataio-ingest = "dataio.ingest:main"
invariants-mine = "invariants.cli:main"

# rtamt has no usable PyPI release on Python >=3.13 (0.3.5 hard-pins the
# broken antlr4 4.7). The git HEAD ships 0.4.10 whose ANTLR parser matches
# antlr4-python3-runtime 4.7.2; a tiny typing.io compat shim (see INSTALL.md /
# conftest.py / src/stl/_rtamt_compat.py) makes it import on Python >=3.12.
# Commit is pinned for reproducibility.
[tool.uv.sources]
rtamt = { git = "https://github.com/nickovic/rtamt", rev = "5cb70d15615790536fae85a05e7ee76a38b4e079" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/st_gen", "src/iec_st_compiler", "src/st_analyze", "src/gfsm", "src/dataio", "src/stl", "src/monitor", "src/invariants", "baselines"]
